# tuna-sdk

./: .env.example  .gitignore  .npmignore  .rustfmt.toml  Anchor.toml  Cargo.toml  README.md  codama.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.changeset/: bitter-eels-happen.md  bitter-peaches-nail.md  blue-jobs-swim.md  busy-cycles-write.md  busy-sites-kneel.md  clean-cougars-flash.md  clean-wings-ask.md  cold-files-wink.md  cold-planets-sing.md  config.json  cruel-worms-unite.md  cyan-cycles-change.md  cyan-emus-march.md  cyan-walls-tan.md  dark-jeans-ask.md  fair-drinks-mate.md  fancy-pillows-kneel.md  few-bananas-talk.md  full-forks-lose.md  funny-hotels-refuse.md  funny-paws-stare.md  gold-geese-reply.md  hip-oranges-poke.md  khaki-moments-dress.md  kind-experts-walk.md  late-bikes-sort.md  lazy-plants-eat.md  lovely-ads-accept.md  major-doodles-think.md  mean-candies-worry.md  metal-yaks-play.md  mighty-animals-obey.md  ninety-times-camp.md  orange-hoops-retire.md  petite-chicken-learn.md  petite-phones-taste.md  pink-cougars-shave.md  pink-paws-cheer.md  proud-llamas-peel.md  quick-hats-bake.md  (+35 more)
.github/workflows/: automerge.yml  release.yml  test.yml
audit/: oshield-defituna-report-01-Sep-2025.md
examples/rust/: Cargo.toml  README.md
examples/rust/src/: constants.rs  errors.rs  main.rs  types.rs
examples/rust/src/lending/: deposit_and_create.rs  mod.rs  open_lending_position_and_deposit.rs  retrieve_lending_positions.rs  withdraw.rs
examples/rust/src/tuna_position/: close_position_with_liquidity_orca.rs  collect_and_compound_fees_orca.rs  collect_fees_orca.rs  mod.rs  open_and_add_liquidity_orca.rs  open_position_with_liquidity_orca.rs  remove_liquidity_and_close_orca.rs  retrieve_tuna_positions.rs
examples/rust/src/utils/: cli.rs  common.rs  lending.rs  mod.rs  orca.rs  solana.rs  wallet.rs
examples/ts/: .env.example  .eslintrc.cjs  .prettierrc.js  README.md  package.json  tsconfig.json
examples/ts/src/: constants.ts
idl/: tuna.json
programs/tuna/: package.json
rust-sdk/client/: CHANGELOG.md  Cargo.toml  README.md  codama.mjs  package.json
rust-sdk/client/src/: consts.rs  lib.rs  pda.rs
rust-sdk/client/src/core_types/: mod.rs  tuna_spot_position.rs
rust-sdk/client/src/gpa/: lending_position.rs  market.rs  mod.rs  referral.rs  tuna_config.rs  tuna_lp_position.rs  tuna_position.rs  tuna_spot_position.rs  utils.rs  vault.rs
rust-sdk/client/src/implementation/: market.rs  mod.rs  tuna_lp_position.rs  tuna_position.rs  tuna_spot_position.rs  vault.rs
rust-sdk/client/src/math/: borrow_curve.rs  fixed_128.rs
rust-sdk/client/src/math/orca/: liquidity.rs  token_math.rs
rust-sdk/client/src/tests/: mod.rs  tuna_liquidity_position_fusion.rs  tuna_liquidity_position_fusion_jupiter.rs  tuna_liquidity_position_orca.rs  tuna_liquidity_position_orca_jupiter.rs  tuna_position_fusion.rs  tuna_position_orca.rs  tuna_spot_position_fusion.rs  tuna_spot_position_orca.rs
rust-sdk/client/src/tests/helpers/: fusion.rs  mod.rs  orca.rs  rpc.rs  setup.rs  token.rs  token_extensions.rs
rust-sdk/client/src/txbuilder/: add_liquidity_fusion.rs  add_liquidity_orca.rs  close_active_tuna_lp_position_fusion.rs  close_active_tuna_lp_position_orca.rs  close_active_tuna_spot_position_fusion.rs  close_active_tuna_spot_position_orca.rs  close_position_fusion.rs  close_position_orca.rs  close_position_with_liquidity_fusion.rs  close_position_with_liquidity_orca.rs  close_tuna_lp_position_fusion.rs  close_tuna_lp_position_orca.rs  close_tuna_spot_position.rs  collect_and_compound_fees_fusion.rs  collect_and_compound_fees_orca.rs  collect_fees_fusion.rs  collect_fees_orca.rs  create_market.rs  create_market_permissionless.rs  create_price_update.rs  create_tuna_config.rs  create_vault.rs  create_vault_permissionless.rs  decrease_tuna_lp_position_fusion.rs  decrease_tuna_lp_position_orca.rs  decrease_tuna_spot_position_fusion.rs  decrease_tuna_spot_position_orca.rs  deposit.rs  increase_tuna_lp_position_fusion.rs  increase_tuna_lp_position_orca.rs  increase_tuna_spot_position_fusion.rs  increase_tuna_spot_position_orca.rs  liquidate_position_fusion.rs  liquidate_position_orca.rs  liquidate_tuna_lp_position_fusion.rs  liquidate_tuna_lp_position_fusion_jupiter.rs  liquidate_tuna_lp_position_orca.rs  liquidate_tuna_lp_position_orca_jupiter.rs  liquidate_tuna_spot_position_fusion.rs  liquidate_tuna_spot_position_jupiter.rs  (+29 more)
rust-sdk/client/src/utils/: fusion.rs  mod.rs  orca.rs  token.rs
rust-sdk/core/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  package.json
rust-sdk/core/src/: consts.rs  lib.rs  macros.rs
rust-sdk/core/src/constants/: error.rs
rust-sdk/core/src/math/: borrow_curve.rs  fixed.rs  mod.rs  price.rs
rust-sdk/core/src/quote/: mod.rs  tuna_lp_position.rs  tuna_spot_position.rs
rust-sdk/core/src/types/: mod.rs  tuna_spot_position.rs
rust-sdk/core/src/utils/: fees.rs  jupiter.rs  mod.rs
rust-sdk/examples/: CHANGELOG.md  Cargo.toml  package.json
rust-sdk/examples/src/: constants.rs  main.rs  types.rs
rust-sdk/examples/src/lending/: open_lending_position_and_deposit.rs  retrieve_lending_positions.rs  withdraw.rs
rust-sdk/examples/src/tuna_lp_position/: close_active_position_orca.rs  collect_and_compound_fees_orca.rs  mod.rs  open_and_increase_position_orca.rs  retrieve_tuna_positions.rs
rust-sdk/examples/src/tuna_position/: close_position_with_liquidity_orca.rs  collect_and_compound_fees_orca.rs  collect_fees_orca.rs  mod.rs  open_position_with_liquidity_orca.rs  retrieve_tuna_positions.rs
rust-sdk/examples/src/utils/: cli.rs  keypair.rs  lut.rs  mod.rs  rpc.rs
rust-sdk/txsender/: CHANGELOG.md  Cargo.toml  README.md  package.json
rust-sdk/txsender/src/: jito.rs  lib.rs  priority_fee.rs
ts-sdk/cli/: .eslintrc.cjs  package.json  tsconfig.json
ts-sdk/cli/src/: base.ts  rpc.ts
ts-sdk/client/: CHANGELOG.md  README.md  codama.mjs  package.json  tsconfig.json
ts-sdk/core/: CHANGELOG.md  Cargo.toml  README.md  package.json  tsconfig.json
ts-sdk/examples/: CHANGELOG.md  README.md  package.json  tsconfig.json
(+232 files in other folders)
