[package]
name = "defituna-examples-rust"
version = "1.0.0"
homepage = "https://defituna.com"
repository = "https://github.com/DefiTuna/tuna-sdk"
keywords = ["solana", "crypto", "defi", "dex", "amm"]
edition = "2021"

[features]
default = []
anchor-idl-build = []
solana-v1 = []

[dependencies]
solana-program = { version = ">=1.16, <3.0" }
solana-client = { version = ">=1.16, <3.0" }
solana-sdk = { version = ">=1.16, <3.0" }
spl-token = { version = "^5.0.2" }
spl-token-2022 = { version = "^5.0.2" }
spl-associated-token-account = { version = "^5.0.1" }
serde_json = { version = "^1.0" }
dirs = { version = "^6.0.0" }
dotenv = { version = "0.15.0" }
orca_whirlpools_client = { version = "^2.0.4", features = ["fetch"] }
orca_whirlpools_core = { version = "^1.0.6" }
solana-account-decoder = { version = "^2.0.25" }
anyhow = { version = "1.0.98" }

tuna_client = { package = "tuna-client", path = '../../packages/rust/client', features = ["fetch"] }
