[package]
name = "tuna-client"
version = "1.0.0"
homepage = "https://defituna.com"
repository = "https://github.com/DefiTuna/tuna-sdk"
keywords = ["solana", "crypto", "defi", "dex", "amm"]
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
anchor = ["dep:anchor-lang"]
anchor-idl-build = []
serde = ["dep:serde", "dep:serde_with"]
fetch = ["dep:solana-client", "dep:solana-sdk", "dep:solana-account-decoder"]
solana-v1 = []

[dependencies]
anchor-lang = { version = ">=0.28, <0.31", optional = true }
borsh = { version = "^0.10" }
num-derive = { version = "^0.4" }
num-traits = { version = "^0.2" }
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.10", optional = true }
solana-program = { version = ">=1.16, <3.0" }
solana-sdk = { version = ">=1.16, <3.0", optional = true }
solana-client = { version = ">=1.16, <3.0", optional = true }
solana-account-decoder = { version = ">=1.16, <3.0", optional = true }
thiserror = { version = "^2.0" }
