[package]
name = "defituna-core"
version = "3.3.0"
homepage = "https://defituna.com"
description = "DefiTuna core library"
license-file = "LICENSE"
repository = "https://github.com/DefiTuna/tuna-sdk"
keywords = ["solana", "crypto", "defi", "dex", "amm"]
edition = "2021"
include = ["src/*"]

[features]
default = []
wasm = ["dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:serde", "dep:serde-big-array", "dep:serde-wasm-bindgen", "dep:js-sys", "dep:tsify"]

[dependencies]
# Solana
solana-pubkey = { version = "^2.2" }
solana-instruction = { version = "^2.2" }

# Fusion Amm
fusionamm-macros = { version = "1.0" }
fusionamm-core = { version = "1.0.76" }

# Other dependencies
libm = { version = ">=0.1, <0.3"}
fixed = { version = "1.29.0" }
uint = { version = "0.9", default-features = false }
jup-ag = { version = "0.9" }
wasm-bindgen = { version = "^0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true  }
serde = { version = "^1.0", features = ["derive"], optional = true }
serde-big-array = { version = "^0.5", optional = true }
serde-wasm-bindgen = { version = "^0.6", optional = true }
js-sys = { version = "^0.3", optional = true }
tsify = { version = "^0.4", features = ["js"], optional = true }
tokio = {  version = "1.48", features = ["sync", "macros", "rt"] }
once_cell = "1.21.3"

[target.wasm32-unknown-unknown.dependencies]
getrandom_v2 = { version = "0.2", features = ["js"], package = "getrandom" }
getrandom    = { version = "0.3", features = ["wasm_js"] }