[package]
name = "defituna-txsender"
version = "0.0.0"
homepage = "https://defituna.com"
description = "Rust transaction sending library to interact with DefiTuna's on-chain program."
license-file = "LICENSE"
repository = "https://github.com/DefiTuna/tuna-sdk"
keywords = ["solana", "crypto", "defi", "dex", "amm"]
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []

[dependencies]
solana-program = { version = ">=1.16, <3.0" }
solana-sdk = { version = ">=1.16, <3.0" }
solana-client = { version = ">=1.16, <3.0" }
solana-transaction-status = { version = ">=1.16, <3.0" }
thiserror = { version = "2.0" }
bincode = "1.3.3"
log = "0.4"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
rand = "0.9"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
anyhow = "1.0.95"
tokio = "1.44.2"
futures-util = "0.3"